<resources>
    <string name="app_name">Alco Meter</string>
    <string name="alcohol_meter">Alcohol meter</string>
    <string name="BAC_value" />
    <string name="weight">Weight (kg)</string>
    <string name="calc_button">Calculate</string>
    <string name="gender">Gender</string>
    <string name="alcohol_consumed">Alcohol Consumed</string>
    <string name="promile">0,75 ‰</string>
    <string name="plus">+</string>
    <string-array name="gender_array">
        <item>Female</item>
        <item>Male</item>
        <item>Transgender</item>
    </string-array>
    <string-array name="drinks_array">
        <item>Beer 10°</item>
        <item>Beer 12°</item>
        <item>Glass of wine</item>
        <item>Vodka (40%) 0,5 dl</item>
        <item>Gin (35%) 0,5 dl</item>
        <item>Slivovica (52%) 0,5 dl</item>
        <item>Black Tatra tea (72%) 0,5 dl</item>
    </string-array>
</resources>